Fix void cast warning in vnacal_new_solve_auto.c
Casts to void were incorrectly written as cast to void pointer.  This
commit also includes a trivial change to vnaconv.3.

--- a/src/vnaconv.3
+++ b/src/vnaconv.3
@@ -627,8 +627,7 @@ i1 and i2 are the currents into ports 1 and 2, and
 Z1 and Z2 are the system impedances the device sees looking out of
 its ports.
 .PP
-Note that for a1, a2, b1 and b2, we're using \(lqvoltage\(rq above
-loosely.
+Note that for a1, a2, b1 and b2, we're using \(lqvoltage\(rq loosely.
 More precisely, these values are defined as root power in units of
 Watt^(1/2).
 In most cases, this distinction isn't important because the scale
